skins/custom/show_bug.css
/*
 * Custom rules for show_bug.css.
 * The rules you put here override rules in that stylesheet.
 */

.last_comment_link {
    float: right;
    font-size: 80%;
    font-weight: normal;
    margin-left: 1em;
}

#legal_disclaimer {
    width: 40em;
    padding: 1em;
    margin: 0 1em 1em 1em;
    font-weight: bold;
    border: 1px red solid;
    background-color: lightyellow;
}

.bz_patch {
    background: #ffffcc;
}

.cc_list_display {
    list-style: none;
    margin:0px;
    padding:5px;
    padding-right:20px;
    overflow:auto;
    float:left;
    max-width:465px;
    max-height:100px;
    border:1px solid #CCC;
}

.cc_list_display li {
    margin:0px;
    padding:0px;
    white-space:nowrap;
}

#wave_wand {
    margin-top: 0px;
}

/* put the width on the TD rather than the PRE to stop the col resizing
   when comments are hidden */
.bz_comment {
    width: 55em;
}
.bz_comment_text {
    width: auto;
}

.bz_comment_number {
	float: right;
}

/* style all field labels the same */

.field_label, .field_label a {
    color: #000;
    font-weight: bold;
}

.field_label a {
    cursor: help;
}

.edit_form table td:first-child {
    width: 0px;
}

